# tritium-sc

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  setup.sh  test.sh
assets/desktop/: tritium.desktop
conf/mosquitto/: acl.conf
demo/motion-sensor/: README.md
demo/swarm-drone/: README.md
docs/: CHANGELOG.md  DEMO-SPEC.md  FLEET-BACKSTORY-SPEC.md  GRAND-PLAN.md  HOW-TO-PLAY.md  IDIOT_CHECK.md  LAYER-STATUS.md  LAYOUT-ZONES.md  MISSION-TYPES-SPEC.md  MQTT_SECURITY.md  SIMULATION.md  UI-FAILURE-MODES.md  UI-FEATURES-SPEC.md  UI-ISSUES.md
docs/reports/: IDIOT_CHECK.md
docs/screenshots/: README.md
examples/ros2-camera/: README.md  package.xml  setup.cfg  setup.py
examples/ros2-camera/config/: camera_params.yaml
examples/ros2-camera/launch/: camera.launch.py
examples/ros2-camera/ros2_camera/: camera_node.py  config.py  main.py  mqtt_publisher.py
examples/ros2-camera/tests/: test_camera_node.py  test_mqtt_publisher.py
frontend/css/: panels.css
frontend/js/: war-combat.js  war-hud.js
plugins/: README.md  automation_loader.py  edge_autonomy_loader.py  indoor_positioning_loader.py  lpr_loader.py  sdr_monitor_loader.py  swarm_coordination_loader.py  threat_feeds_loader.py  wifi_fingerprint_loader.py
plugins/acoustic/: routes.py
plugins/amy/: plugin.py
plugins/automation/: README.md  __init__.py  plugin.py  routes.py  rules.py
scenarios/: neighborhood_default.json
scripts/: deploy.sh  generate_screenshot_readme.py  run.py  run_scenarios.py  tritium-launch.sh
src/amy/: router.py  (+1 more)
tests/: test_geo_reference.py  w177_loop6_test.py
(+498 files in other folders)
