<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_camera</name>
  <version>0.1.0</version>
  <description>TRITIUM-SC ROS2 camera node: subscribes to /camera/image_raw and publishes detections via MQTT</description>
  <maintainer email="dev@tritium-sc.local">TRITIUM-SC</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
